<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/btnRequestCode"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="60"
            android:textColor="#FFFFFF"   
            android:background="@layout/selector_button"
            android:text="@string/btnRequestCode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <EditText
            android:id="@+id/edtCode"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="60"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/edtCode"
            android:inputType="number"
            android:maxLength="6" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="60"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/edtPhoneNumber"
            android:inputType="number"
            android:maxLength="11" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="60"
            android:textColor="#FFFFFF"
            android:background="@layout/selector_button"
            android:text="@string/btnRegisterCode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:gravity="center" >
    </LinearLayout>

</LinearLayout>