<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <EditText
            android:id="@+id/edtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:ems="10"
            android:textColorHint="#636262"
            android:gravity="right"
            android:hint="@string/edtName"
            android:imeOptions="actionNext"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <EditText
            android:id="@+id/edtCelphoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/edtCellphoneNumber"
            android:inputType="number"
            android:maxLines="11" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <EditText
            android:id="@+id/edtRepeatCellphoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/edtRepeatCellphoneNumber"
            android:inputType="number"
            android:maxLines="11" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/btnRegisterName"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="60"
            android:background="@layout/selector_button"
            android:text="@string/btnRegisterName"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:gravity="center" >
    </LinearLayout>

</LinearLayout>